--- a/desktop/php/local.html
+++ b/desktop/php/local.html
@@ -3,7 +3,7 @@
   <!-- Local Home SDK -->
   <script src="//www.gstatic.com/eureka/smarthome/smarthome_sdk.js"></script>
   <!-- Local app under development -->
-  <script src="/plugins/gsh/resources/local_execution.js"></script>
+  <script src="https://cloud.jeedom.com/static/gsh_local_execution.js"></script>
 </head>
 
 </html>
